--- a/theme/customizations/_buttons.scss
+++ b/theme/customizations/_buttons.scss
@@ -19,9 +19,9 @@ $button-variants: (
     active-color: $white,
     active-bg: $neutral-600,
     active-border-color: $neutral-600,
-    disabled-color: $neutral-400,
-    disabled-bg: $neutral-200,
-    disabled-border-color: $neutral-200
+    disabled-color: $gray-400,
+    disabled-bg: $gray-200,
+    disabled-border-color: $gray-200
   ),
   "primary": (
     color: $white,
@@ -33,9 +33,9 @@ $button-variants: (
     active-color: $white,
     active-bg: $primary-800,
     active-border-color: $primary-800,
-    disabled-color: $white,
-    disabled-bg: $primary-200,
-    disabled-border-color: $primary-200
+    disabled-color: $gray-400,
+    disabled-bg: $gray-200,
+    disabled-border-color: $gray-200
   ),
   "secondary": (
     color: $black,
@@ -47,9 +47,9 @@ $button-variants: (
     active-color: $black,
     active-bg: $secondary-200,
     active-border-color: $secondary-400,
-    disabled-color: $secondary-400,
-    disabled-bg: $secondary-200,
-    disabled-border-color: $secondary-300
+    disabled-color: $gray-400,
+    disabled-bg: $gray-200,
+    disabled-border-color: $gray-200
   ),
   "success": (
     color: $white,
@@ -79,14 +79,98 @@ $button-variants: (
     disabled-bg: $danger-100,
     disabled-border-color: $danger-100
   ),
+  "outline-danger": (
+    color: $danger-700,
+    bg: transparent,
+    border-color: $danger-300,
+    hover-color: $danger-700,
+    hover-bg: $danger-50,
+    hover-border-color: $danger-300,
+    active-color: $danger-700,
+    active-bg: $danger-100,
+    active-border-color: $danger-400,
+    disabled-color: $gray-400,
+    disabled-bg: $gray-200,
+    disabled-border-color: $gray-200
+  ),
+  "outline-danger-secondary": (
+    color: $danger-700,
+    bg: transparent,
+    border-color: $danger-200,
+    hover-color: $danger-700,
+    hover-bg: $danger-50,
+    hover-border-color: $danger-200,
+    active-color: $danger-700,
+    active-bg: $danger-100,
+    active-border-color: $danger-300,
+    disabled-color: $gray-400,
+    disabled-bg: $gray-200,
+    disabled-border-color: $gray-200
+  ),
+  "danger-transparent": (
+    color: $danger-600,
+    bg: transparent,
+    border-color: transparent,
+    hover-color: $danger-700,
+    hover-bg: transparent,
+    hover-border-color: transparent,
+    active-color: $danger-800,
+    active-bg: transparent,
+    active-border-color: transparent,
+    disabled-color: $gray-400,
+    disabled-bg: transparent,
+    disabled-border-color: transparent
+  ),
+  "danger-subtle": (
+    color: $danger-700,
+    bg: transparent,
+    border-color: transparent,
+    hover-color: $danger-700,
+    hover-bg: $danger-50,
+    hover-border-color: transparent,
+    active-color: $danger-700,
+    active-bg: $danger-100,
+    active-border-color: transparent,
+    disabled-color: $gray-400,
+    disabled-bg: transparent,
+    disabled-border-color: transparent
+  ),
+  "danger-secondary": (
+    color: $danger-700,
+    bg: $danger-50,
+    border-color: transparent,
+    hover-color: $danger-700,
+    hover-bg: $danger-100,
+    hover-border-color: transparent,
+    active-color: $danger-700,
+    active-bg: $danger-200,
+    active-border-color: transparent,
+    disabled-color: $gray-400,
+    disabled-bg: $gray-200,
+    disabled-border-color: $gray-200
+  ),
+  "danger-primary": (
+    color: $white,
+    bg: $danger-600,
+    border-color: $danger-600,
+    hover-color: $white,
+    hover-bg: $danger-700,
+    hover-border-color: $danger-700,
+    active-color: $white,
+    active-bg: $danger-800,
+    active-border-color: $danger-800,
+    disabled-color: $neutral-500,
+    disabled-bg: $danger-100,
+    disabled-border-color: $danger-100
+  ),
   "warning": (
-    color: $neutral-950,
+    color: $white,
     bg: $warning-400,
     border-color: $warning-400,
-    hover-color: $neutral-950,
+    hover-color: $white,
     hover-bg: $warning-500,
     hover-border-color: $warning-500,
-    active-color: $neutral-950,
+    active-color: $white,
     active-bg: $warning-600,
     active-border-color: $warning-600,
     disabled-color: $neutral-500,
@@ -156,8 +240,8 @@ $button-variants: (
     hover-bg: transparent,
     hover-border-color: transparent,
     active-color: $black,
-    active-bg: transparent,
-    active-border-color: transparent,
+    active-bg: $secondary-200,
+    active-border-color: $secondary-300,
     disabled-color: $neutral-400,
     disabled-bg: transparent,
     disabled-border-color: transparent
